--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,5 @@
 body{
- font-family: 'Shadows Into Light', cursive;
+  font-family: 'Shadows Into Light', cursive;
+  background-color: #282C34;
+  color: #E2C08D;
 }
