--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,9 +1,30 @@
-@media only and (min-width: 640px) {
-	.nav ul {
-		display: block;
-	}
-}
 
 .nav ul {
 	display: inline-block;
+	list-style: none;
+}
+
+@media only screen and (min-width: 640px) {
+  .icon-menu {
+    display: none;
+
+  }
+
+  .main-nav {
+    padding: .2em .2em .2em 2em;
+  }
+
+  .main-nav ul {
+    display: block;
+  }
+
+  .main-nav ul li {
+    display: inline;
+    border-bottom: none;
+  }
+
+  .main-nav ul li:hover a {
+    color: #29506D;
+  }
+
 }
