--- a/styles/layout.css
+++ b/styles/layout.css
@@ -4,8 +4,20 @@
 	list-style: none;
 }
 
+@media only screen and (max-width: 500px) {
+	h1 {
+		font-size: 1.5em;
+	}
+}
+
+@media only screen and (min-width: 501px) and (max-width: 639px) {
+	h1 {
+		font-size: 2em;
+	}
+}
+
 @media only screen and (min-width: 640px) {
-  .icon-menu {
+	.icon-menu {
     display: none;
 
   }
@@ -27,4 +39,15 @@
     color: #29506D;
   }
 
+	h1 {
+		font-size: 3em;
+	}
+}
+
+@media only screen and (min-width: 800px) {
+
+
+	h1 {
+		font-size: 4em;
+	}
 }
