--- a/styles/base.css
+++ b/styles/base.css
@@ -8,6 +8,7 @@ h1 {
   text-align: center;
   margin: 0px;
   font-size: 4em
+  padding: 1em;
 }
 
 h6 {
@@ -16,8 +17,9 @@ h6 {
 }
 
 p {
-  padding: 5%;
+  padding: 1em;
 }
+
 a {
   text-decoration: none;
   color: #B63838;
