--- a/styles/base.css
+++ b/styles/base.css
@@ -8,16 +8,18 @@ h1 {
   text-align: center;
   margin: 0px;
   font-size: 4em
-  padding: 1em;
+  padding: 1.5em;
 }
 
 h6 {
   text-align: center;
   margin: 0px;
+  font-size: 1.5em;
 }
 
 p {
   padding: 1em;
+  font-size: 1.5em;
 }
 
 a {
